syntax = "proto3";
package vagrant.caps;

import "github.com/hashicorp/vagrant/ext/go-plugin/vagrant/plugin/proto/vagrant_common/common.proto";

message Capability {
  string name = 1;
  string platform = 2;
}

message ProviderCapability {
  string name = 1;
  string provider = 2;
}

message ProviderCapabilitiesResponse {
  repeated ProviderCapability capabilities = 1;
  string error = 2;
}

message ProviderCapabilityRequest {
  ProviderCapability capability = 1;
  string machine = 2;
  string arguments = 3;
}

message ProviderCapabilityResponse {
  string result = 1;
  string error = 2;
}

message CapabilitiesResponse {
  repeated Capability capabilities = 1;
  string error = 2;
}

message GuestCapabilityRequest {
  Capability capability = 1;
  string machine = 2;
  string arguments = 3;
}

message GuestCapabilityResponse {
  string result = 1;
  string error = 2;
}

message HostCapabilityRequest {
  Capability capability = 1;
  string environment = 2;
  string arguments = 3;
}

message HostCapabilityResponse {
  string result = 1;
  string error = 2;
}

service GuestCapabilities {
  rpc GuestCapabilities(vagrant.common.NullRequest) returns (CapabilitiesResponse);
  rpc GuestCapability(GuestCapabilityRequest) returns (GuestCapabilityResponse);
}

service HostCapabilities {
  rpc HostCapabilities(vagrant.common.NullRequest) returns (CapabilitiesResponse);
  rpc HostCapability(HostCapabilityRequest) returns (HostCapabilityResponse);
}

service ProviderCapabilities {
  rpc ProviderCapabilities(vagrant.common.NullRequest) returns (ProviderCapabilitiesResponse);
  rpc ProviderCapability(ProviderCapabilityRequest) returns (ProviderCapabilityResponse);
}